--- a/Semester B web 2019/Ex01/Yehuda.html
+++ b/Semester B web 2019/Ex01/Yehuda.html
@@ -8,9 +8,9 @@
         <img src="images/Yehuda.jpg" alt="Yehuda Adivi" title="Yehuda Adivi">
         <h2>Father</h2>
         <p>The family leader, Likes to drink bear and play <b><i>Pétanque</i></b>
-            <br>In his spare time build all kind of things, A good dad.</p>
-            <a href="index.html">Home Page</a>
-        <h6>&copy; Tal Adivi</h6>    
+            <br><br>In his spare time build all kind of things, A good dad.</p>
+            <br><a href="index.html">Home Page</a>
+        <h6>&copy; Tal &nbsp; &nbsp; &nbsp; Adivi</h6>    
     </body>
 </html>
 
