--- a/Semester B web 2019/Ex01/Shlomit.html
+++ b/Semester B web 2019/Ex01/Shlomit.html
@@ -4,11 +4,13 @@
         <title>Tal Adivi</title>
     </head>
     <body>
-        <h1 id="Mother"> Shlomit Adivi</h1>
         <img src="images/Shlomit.jpg" alt="Shlomit Adivi" title="Shlomit Adivi">
+        <h1>Shlomit Adivi</h1>
         <h2>Mother</h2>
         <p>The <b><i>real</i></b> family leader, Likes to take noon naps while watching TV.
-            <br>In her spare time cooks for me and go to the gym addicted to comfort, A good mom.</p>
+           <br><br>In her spare time cooks for me and go to the gym addicted to comfort, A good mom.</p>
+           <br><a href="index.html">Home Page</a>
+        <h6>&copy; Tal &nbsp;&nbsp;&nbsp;Adivi</h6> 
     </body>
 </html>
 
