--- a/Semester B web 2019/index.html
+++ b/Semester B web 2019/index.html
@@ -5,6 +5,8 @@
     <title>Tal Adivi</title>
 </head>
 <body>
+  <section id="wrapper">
+
   <header>
       <a href="ex2.html"><span><b>Tal Adivi</b></span></a>
   </header>
@@ -41,6 +43,7 @@
           <img id="FrontImg" src="images/20170207_125312.jpg" alt="Tal and Dafi photo 2" title="Tal and Dafi photo 2">
       </section>
   </main>
+</section>
   <footer class="Icons">
 
       <section id="Git">
