--- a/Semester B web 2019/index.html
+++ b/Semester B web 2019/index.html
@@ -8,7 +8,7 @@
   <section id="wrapper">
 
   <header>
-      <a href="ex2.html"><span><b>Tal Adivi</b></span></a>
+      <a href="index.html"><span><b>Tal Adivi</b></span></a>
   </header>
   <nav class="links">
         <a href="https://github.com/TalAdivi/Web2019/tree/master/Semester%20B%20web%202019" target="_black" >GitHub</a>
