change front img

--- a/Semester B web 2019/index.html
+++ b/Semester B web 2019/index.html
@@ -39,7 +39,7 @@
       </section>
       <section>
           <img id="BackImg" src="images/G1091553.jpg" alt="Tal and Dafi photo" title="Tal and Dafi photo">
-          <img id="FrontImg" src="images/" alt="Tal and Dafi photo 2" title="Tal and Dafi photo 2">
+          <img id="FrontImg" src="images/20170207_125313.jpg" alt="Tal and Dafi photo 2" title="Tal and Dafi photo 2">
       </section>
   </main>
 </section>
