Removed personal stuff

--- a/Semester B web 2019/exercises/ex03/index.html
+++ b/Semester B web 2019/exercises/ex03/index.html
@@ -5,8 +5,16 @@
     <link rel="stylesheet" href="include/style.css">
     <title> </title>
 </head>
+
 <body id="layout1">
     <header>
+        
+        <ul>
+           
+            <li class="selected MIX"><div class="dot"></div><a href="#"><span>MIX</span></a></li>
+            <li><a href="https://github.com/TalAdivi/Web2019/tree/master/Semester%20B%20web%202019"><span>STAIRS</span></a></li>
+            <li><a href="#"></a><span>DYNAMIC</span></li>
+        </ul>
     </header>
     <main>
         <section class="text">
