--- a/Semester B web 2019/exercises/ex03/index.html
+++ b/Semester B web 2019/exercises/ex03/index.html
@@ -8,28 +8,41 @@
 
 <body id="layout1">
     <header>
-        
         <ul>
-           
-            <li class="selected MIX"><div class="dot"></div><a href="#"><span>MIX</span></a></li>
-            <li><a href="https://github.com/TalAdivi/Web2019/tree/master/Semester%20B%20web%202019"><span>STAIRS</span></a></li>
-            <li><a href="#"></a><span>DYNAMIC</span></li>
+            <section class="dot"> </section>
+            <li><a href="#"><span>MIX</span></a></li>
+            <li><a href=""><span>STAIRS</span></a></li>
+            <li><a href=""><span>DYNAMIC</span></a></li>
         </ul>
     </header>
-    <main>
-        <section class="text">
-            <h1>M I X</h1>
-            <h3>Mix layout for any creative idea</h3>
-        </section>
-        <section>
-            <section class="boxes">
-                <div class="box1"></div>
-                <div class="box2"></div>
-                <div class="box3"></div>
+    <div id="wrapper">
+        <main>
+            <section class="text">
+                <h1>- M I X</h1>
+                <h3>Mix layout for any creative idea</h3>
             </section>
-        </section>
-    </main>
-    <footer></footer>
+            <section>
+                <section class="boxes">
+                    <div class="box1"></div>
+                    <div class="box2"></div>
+                    <div class="box3"></div>
+                    <div class="box4"></div>
+                    <div class="box5"></div>
+                    <div class="box6"></div>
+                    <div class="box7"></div>
+                    <div class="box8"></div>
+                    <div class="box9"></div>
+                    <div class="box10"></div>
+                    <div class="box11"></div>
+                    <div class="box12"></div>
+                    <div class="box13"></div>
+                    <div class="box14"></div>
+                    <div class="box15"></div>
+                </section>
+            </section>
+        </main>
+    </div>
+    <footer>1</footer>
 </body>
 
 </html>
