--- a/Semester B web 2019/exercises/ex03/index.html
+++ b/Semester B web 2019/exercises/ex03/index.html
@@ -10,9 +10,9 @@
     <header>
         <ul>
             <section class="dot"> </section>
-            <li><a href="#"><span>MIX</span></a></li>
-            <li><a href=""><span>STAIRS</span></a></li>
-            <li><a href=""><span>DYNAMIC</span></a></li>
+            <li><a href="index.html"><span>MIX</span></a></li>
+            <li><a href="layout2.html"><span>STAIRS</span></a></li>
+            <li><a href="layout3.html"><span>DYNAMIC</span></a></li>
         </ul>
     </header>
     <div id="wrapper">
