--- a/Semester B web 2019/exercises/ex03/layout2.html
+++ b/Semester B web 2019/exercises/ex03/layout2.html
@@ -2,15 +2,25 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="include/styleTirgol.css">
+    <link rel="stylesheet" href="include/style.css">
 </head>
 
-<body>
-<div class="flex-container">
-    <div>1</div>
-    <div>2</div>
-    <div>3</div>
-    <div>4</div>
+<body id="layout2">
+    <header>
+        <ul>
+            <section class="dot"> </section>
+            <li><a href="index.html"><span>MIX</span></a></li>
+            <li><a href="layout2.html"><span>STAIRS</span></a></li>
+            <li><a href="layout3.html"><span>DYNAMIC</span></a></li>
+        </ul>
+    </header>
+    <div id="wrapper">
+
+    
+    <div class="flex-container">
+        <div>1</div>
+
+    </div>
 </div>
 </body>
 
