from ex0X to exX

--- a/Semester B web 2019/index.html
+++ b/Semester B web 2019/index.html
@@ -45,25 +45,18 @@
       </section>
     </main>
   </section>
-  <footer class="Icons">
+  <footer>
 
     <section id="Git">
-      <a href="https://github.com/TalAdivi/Web2019/tree/master/Semester%20B%20web%202019" target="_black"><img
-          src="images/GitHub icon.png" alt="GitHub icon" title="GitHub icon"><span>See my Work</span></a>
+      <a href="https://github.com/TalAdivi/Web2019/tree/master/Semester%20B%20web%202019" target="_black"><span>SEE MY WORK</span></a>
     </section>
 
     <section id="FiveLinks">
-      <a href="https://www.google.co.il" target="_black"><img src="images/google-icon-logo-png-transparent.png"
-          alt="google icon" title="google icon"><span>Google</span></a>
-      <a href="https://www.geektime.co.il/" target="_black"><img src="images/Geektime.png" alt="GeekTime icon"
-          title="GeekTIme icon"><span>GeekTime</span></a>
-      <a href="https://translate.google.co.il/?hl=iw&tab=TT&authuser=0" target="_black"><img
-          src="images/Google-Translate-icon.png" alt="GoogleTranslate icon"
-          title="GoogleTranslate icon"><span>Translate</span></a>
-      <a href="http://www.cplusplus.com/reference/clibrary/" target="_black"><img src="images/bg.png"
-          alt="cplusplus icon" title="cplusplus icon"><span>cpp Libs</span></a>
-      <a href="https://www.ynet.co.il/home/0,7340,L-8,00.html" target="_black"><img src="images/Ynet Icon .png"
-          alt="Ynet icon" title="Ynet icon"><span>Ynet</span></a>
+      <a href="https://www.google.co.il" target="_black"><span>Google</span></a>
+      <a href="https://www.geektime.co.il/" target="_black"><span>GeekTime</span></a>
+      <a href="https://translate.google.co.il/?hl=iw&tab=TT&authuser=0" target="_black"><span>Translate</span></a>
+      <a href="http://www.cplusplus.com/reference/clibrary/" target="_black"><span>cpp Libs</span></a>
+      <a href="https://www.ynet.co.il/home/0,7340,L-8,00.html" target="_black"><span>Ynet</span></a>
     </section>
     <section class="Boundary"></section>
     <section id="OtherLinks">
