--- a/Semester B web 2019/tirgol/6/index.html
+++ b/Semester B web 2019/tirgol/6/index.html
@@ -3,13 +3,13 @@
     <head>
         <title>Our store</title>
         <link href="includes/style.css">
-       
-
+    
     </head>
     <body>
         <button id="btn">Button</button>
         <h1 id="pageTitle">Main Title</h1>
         <p id="dynTxt"></p> 
         <script src="includes/javascrips.js"></script>
+        <section id="text"></section>
     </body>
-</html>
+    </html>
