--- a/Semester B web 2019/exercises/ex3/layout3.html
+++ b/Semester B web 2019/exercises/ex3/layout3.html
@@ -3,12 +3,13 @@
 
 <head>
     <link rel="stylesheet" href="include/style.css">
+   
 </head>
 <div id="wrapper">
 
     <body id="layout3">
         <header>
-
+            <section id="squareMaker"> </section>
         </header>
         <aside id="layoutsLinks">
             <ul>
@@ -18,6 +19,10 @@
                 <li><a href="layout3.html"><span>DYNAMIC</span></a></li>
             </ul>
         </aside>
+        <main>
+            
+        </main>
+        
         <aside id="greenBox">
 
         </aside>
@@ -28,8 +33,7 @@
         </section>
         <footer></footer>
 </div>
-
-
+<script src="include/main.js"> </script>
 </body>
 
 </html>
