--- a/Semester B web 2019/index.html
+++ b/Semester B web 2019/index.html
@@ -12,12 +12,12 @@
       <a href="index.html"><span><b>Tal Adivi</b></span></a>
     </header>
     <nav class="links">
-      <a href="https://github.com/TalAdivi/Web2019/tree/master/Semester%20B%20web%202019" target="_black">GitHub</a>
-      <a href="exercises/ex01/" target="_black">Ex01</a>
-      <a href="#" target="_black">#</a>
-      <a href="#" target="_black">#</a>
-      <a href="#" target="_black">#</a>
-      <a href="#" target="_black">#</a>
+      <a href="https://github.com/TalAdivi/Web2019/tree/master/Semester%20B%20web%202019" target="_blank">GitHub</a>
+      <a href="exercises/ex1/" target="_blank">Ex01</a>
+      <a href="#" target="_blank">#</a>
+      <a href="#" target="_blank">#</a>
+      <a href="#" target="_blank">#</a>
+      <a href="#" target="_blank">#</a>
     </nav>
     <main>
       <section class="imgPadding">
@@ -48,21 +48,21 @@
   <footer>
 
     <section id="Git">
-      <a href="https://github.com/TalAdivi/Web2019/tree/master/Semester%20B%20web%202019" target="_black"><span>SEE MY WORK</span></a>
+      <a href="https://github.com/TalAdivi/Web2019/tree/master/Semester%20B%20web%202019" target="_blank"><span>SEE MY WORK</span></a>
     </section>
 
     <section id="FiveLinks">
-      <a href="https://www.google.co.il" target="_black"><span>Google</span></a>
-      <a href="https://www.geektime.co.il/" target="_black"><span>GeekTime</span></a>
-      <a href="https://translate.google.co.il/?hl=iw&tab=TT&authuser=0" target="_black"><span>Translate</span></a>
-      <a href="http://www.cplusplus.com/reference/clibrary/" target="_black"><span>cpp Libs</span></a>
-      <a href="https://www.ynet.co.il/home/0,7340,L-8,00.html" target="_black"><span>Ynet</span></a>
+      <a href="https://www.google.co.il" target="_blank"><span>Google</span></a>
+      <a href="https://www.geektime.co.il/" target="_blank"><span>GeekTime</span></a>
+      <a href="https://translate.google.co.il/?hl=iw&tab=TT&authuser=0" target="_blank"><span>Translate</span></a>
+      <a href="http://www.cplusplus.com/reference/clibrary/" target="_blank"><span>cpp Libs</span></a>
+      <a href="https://www.ynet.co.il/home/0,7340,L-8,00.html" target="_blank"><span>Ynet</span></a>
     </section>
     <section class="Boundary"></section>
     <section id="OtherLinks">
-      <a href="https://www.facebook.com/adivi" target="_black"><img src="images/facebook.png" alt="FaceBook icon"
+      <a href="https://www.facebook.com/adivi" target="_blank"><img src="images/facebook.png" alt="FaceBook icon"
           title="FaceBook icon"></a>
-      <a href="https://www.linkedin.com/in/tal-adivi-38434617a" target="_black"><img
+      <a href="https://www.linkedin.com/in/tal-adivi-38434617a" target="_blank"><img
           src="images/768px-LinkedIn_logo_initials.png" alt="LinkedIn icon" title="LinkedIn icon"></a>
     </section>
   </footer>
