--- a/Semester B web 2019/exercises/ex3/index.html
+++ b/Semester B web 2019/exercises/ex3/index.html
@@ -3,16 +3,16 @@
 
 <head>
     <link rel="stylesheet" href="include/style.css">
-    <title> </title>
+    <title>Layout1</title>
 </head>
 
 <body id="layout1">
     <header>
         <ul>
-            <section class="dot"> </section>
-            <li><a href="index.html"><span>MIX</span></a></li>
-            <li><a href="layout2.html"><span>STAIRS</span></a></li>
-            <li><a href="layout3.html"><span>DYNAMIC</span></a></li>
+            <section class="dot"></section>
+            <li><a href="index.html">MIX</a></li>
+            <li><a href="layout2.html">STAIRS</a></li>
+            <li><a href="layout3.html">DYNAMIC</a></li>
         </ul>
     </header>
     <div id="wrapper">
@@ -21,7 +21,6 @@
                 <h1>- M I X</h1>
                 <h3>Mix layout for any creative idea</h3>
             </section>
-            <section>
                 <section class="boxes">
                     <div class="box1"></div>
                     <div class="box2"></div>
@@ -39,10 +38,8 @@
                     <div class="box14"></div>
                     <div class="box15"></div>
                 </section>
-            </section>
         </main>
     </div>
-    <footer>1</footer>
+    <footer></footer>
 </body>
-
 </html>
