--- a/Semester B web 2019/exercises/ex3/layout3.html
+++ b/Semester B web 2019/exercises/ex3/layout3.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <link rel="stylesheet" href="include/style.css">
-   
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <!-- UTF-8 = support in hebrew/arabic -->
+    <meta charset="UTF-8">
+    <title>Layout3</title>
 </head>
 <div id="wrapper">
-
     <body id="layout3">
         <header>
             <section id="squareMaker"> </section>
@@ -19,21 +20,12 @@
                 <li><a href="layout3.html"><span>DYNAMIC</span></a></li>
             </ul>
         </aside>
-        <main>
-            
-        </main>
-        
-        <aside id="greenBox">
-
-        </aside>
+        <main></main>
+        <aside id="greenBox"></aside>
         <div class="clear"></div>
-
-        <section id="yellowBox">
-
-        </section>
+        <section id="yellowBox"></section>
         <footer></footer>
-</div>
-<script src="include/main.js"> </script>
-</body>
-
+        <script src="include/main.js"> </script>
+    </body>
+    </div>
 </html>
