--- a/Semester B web 2019/exercises/ex3/layout2.html
+++ b/Semester B web 2019/exercises/ex3/layout2.html
@@ -2,14 +2,15 @@
 <html>
 <head>
     <link rel="stylesheet" href="include/style.css">
+    <title>Layout2</title>
 </head>
 <body id="layout2">
     <header>
         <ul>
             <section class="dot"> </section>
-            <li><a href="index.html"><span>MIX</span></a></li>
-            <li><a href="layout2.html"><span>STAIRS</span></a></li>
-            <li><a href="layout3.html"><span>DYNAMIC</span></a></li>
+            <li><a href="index.html">MIX</a></li>
+            <li><a href="layout2.html">STAIRS</a></li>
+            <li><a href="layout3.html">DYNAMIC</a></li>
         </ul>
     </header>
     <div id="wrapper">
@@ -17,15 +18,13 @@
             <div class="firstBlackBox"></div>
             <div class="whiteBox"></div>
             <div class="secondBlackBox"></div>
-            <section class="sideText">
-                <ol>
-                    <li><a href="https://he.wikipedia.org/wiki/%D7%A9%D7%A4%D7%99%D7%98%D7%94_(%D7%96%D7%9E%D7%A8%D7%AA)"><span>T</span></a></li>
-                    <li><a href="https://he.wikipedia.org/wiki/%D7%95%D7%95%D7%91%D7%95%D7%96%D7%9C%D7%94"><span>A</span></a></li>
-                    <li><a href="https://he.wikipedia.org/wiki/%D7%A9%D7%99%D7%A0%D7%94#%D7%A9%D7%A0%D7%AA_REM"><span>L</span></a>-</li>
+                <ol class="sideText">
+                    <li><a href="https://he.wikipedia.org/wiki/%D7%A9%D7%A4%D7%99%D7%98%D7%94_(%D7%96%D7%9E%D7%A8%D7%AA)">T</a></li>
+                    <li><a href="https://he.wikipedia.org/wiki/%D7%95%D7%95%D7%91%D7%95%D7%96%D7%9C%D7%94">A</a></li>
+                    <li><a href="https://he.wikipedia.org/wiki/%D7%A9%D7%99%D7%A0%D7%94#%D7%A9%D7%A0%D7%AA_REM">L</a></li>
                 </ol>
-            </section>
         </aside>
-        <section class="flex-container">
+        <div class="flex-container">
             <section id="rightBoxes">
                 <div class="box6"></div>
                 <div class="box7"></div>
@@ -40,7 +39,7 @@
                 <div class="box4"></div>
                 <div class="box5"></div>
             </section>
-        </section>
+        </div>
     </div>
     <footer></footer>
 </body>
