--- a/Semester B web 2019/exercises/ex1/index.html
+++ b/Semester B web 2019/exercises/ex1/index.html
@@ -2,18 +2,42 @@
 <html>
 
 <head>
+    <link rel ="stylesheet" href="includes/style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>Tal Adivi</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <!-- <script src="includes/main.js" async></script>  OR TO DO THAT-->
 </head>
 
-<body>
+
+<body>  
+    <div class = "container">
+    <div class = "row">
+        <div class = "col">col</div>
+        <div class = "col">col</div>
+        <div class = "col">col</div>
+        <div class = "col">col</div>
+    </div>
+
+    <div class = "row">
+            <div class = "col-8">col</div>
+            <div class = "col-4">col</div>
+        </div>
     <img src="images/AllFamily.jpg" alt="Family Pic" title="Family Pic">
     <br>
     <h1>The Adivi's</h1>
-    <ul>
-        <li><a href="Yehuda.html">Yehuda</a></li>
-        <li><a href="Shlomit.html">Shlomit</a></li>
-        <li><a href="Hadar.html">Hadar</a></li>
-    </ul>
+    <nav>
+        <ul class="nav nav-pills">
+            <li  class="nav-item" ><a class="nav-link" href="Yehuda.html">Yehuda</a></li>
+            <li  class="nav-item" ><a class ="nav-link active" href="Shlomit.html">Shlomit</a></li>
+            <li  class="nav-item"><a  class ="nav-link" href="Hadar.html">Hadar</a></li>
+        </ul>
+    </nav>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script src="includes/main.js"></script>
+</div>
 </body>
 
 </html>
