--- a/Semester B web 2019/index.html
+++ b/Semester B web 2019/index.html
@@ -12,12 +12,12 @@
       <a href="index.html"><span><b>Tal Adivi</b></span></a>
     </header>
     <nav class="links">
-      <a href="https://github.com/TalAdivi/Web2019/tree/master/Semester%20B%20web%202019" target="_black">GitHub</a>
+      <a href="https://github.com/TalAdivi/Web2019/tree/master/Semester%20B%20web%202019" target="_blank">GitHub</a>
       <a href="exercises/ex1/" target="_blank">Ex1</a>
-      <a href="exercises/ex3/" target="-blank">Ex3</a>
-      <a href="#" target="-blank">#</a>
-      <a href="#" target="-blank">#</a>
-      <a href="#" target="-blank">#</a>
+      <a href="exercises/ex3/" target="_blank">Ex3</a>
+      <a href="#" target="_blank">#</a>
+      <a href="#" target="_blank">#</a>
+      <a href="#" target="_blank">#</a>
     </nav>
     <main>
       <section class="imgPadding">
@@ -48,28 +48,28 @@
   <footer class="Icons">
 
     <section id="Git">
-      <a href="https://github.com/TalAdivi/Web2019/tree/master/Semester%20B%20web%202019" target="_black"><img
+      <a href="https://github.com/TalAdivi/Web2019/tree/master/Semester%20B%20web%202019" target="_blank"><img
           src="images/GitHub icon.png" alt="GitHub icon" title="GitHub icon"><span>See my Work</span></a>
     </section>
 
     <section id="FiveLinks">
-      <a href="https://www.google.co.il" target="_black"><img src="images/google-icon-logo-png-transparent.png"
+      <a href="https://www.google.co.il" target="_blank"><img src="images/google-icon-logo-png-transparent.png"
           alt="google icon" title="google icon"><span>Google</span></a>
-      <a href="https://www.geektime.co.il/" target="_black"><img src="images/Geektime.png" alt="GeekTime icon"
+      <a href="https://www.geektime.co.il/" target="_blank"><img src="images/Geektime.png" alt="GeekTime icon"
           title="GeekTIme icon"><span>GeekTime</span></a>
-      <a href="https://translate.google.co.il/?hl=iw&tab=TT&authuser=0" target="_black"><img
+      <a href="https://translate.google.co.il/?hl=iw&tab=TT&authuser=0" target="_blank"><img
           src="images/Google-Translate-icon.png" alt="GoogleTranslate icon"
           title="GoogleTranslate icon"><span>Translate</span></a>
-      <a href="http://www.cplusplus.com/reference/clibrary/" target="_black"><img src="images/bg.png"
+      <a href="http://www.cplusplus.com/reference/clibrary/" target="_blank"><img src="images/bg.png"
           alt="cplusplus icon" title="cplusplus icon"><span>cpp Libs</span></a>
-      <a href="https://www.ynet.co.il/home/0,7340,L-8,00.html" target="_black"><img src="images/Ynet Icon .png"
+      <a href="https://www.ynet.co.il/home/0,7340,L-8,00.html" target="_blank"><img src="images/Ynet Icon .png"
           alt="Ynet icon" title="Ynet icon"><span>Ynet</span></a>
     </section>
     <section class="Boundary"></section>
     <section id="OtherLinks">
-      <a href="https://www.facebook.com/adivi" target="_black"><img src="images/facebook.png" alt="FaceBook icon"
+      <a href="https://www.facebook.com/adivi" target="_blank"><img src="images/facebook.png" alt="FaceBook icon"
           title="FaceBook icon"></a>
-      <a href="https://www.linkedin.com/in/tal-adivi-38434617a" target="_black"><img
+      <a href="https://www.linkedin.com/in/tal-adivi-38434617a" target="_blank"><img
           src="images/768px-LinkedIn_logo_initials.png" alt="LinkedIn icon" title="LinkedIn icon"></a>
     </section>
   </footer>
