--- a/Semester B web 2019/exercises/ex3/layout2.html
+++ b/Semester B web 2019/exercises/ex3/layout2.html
@@ -26,18 +26,18 @@
         </aside>
         <div class="flex-container">
             <section id="rightBoxes">
-                <div class="box6"></div>
-                <div class="box7"></div>
-                <div class="box8"></div>
-                <div class="box9"></div>
-                <div class="box10"></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
             </section>
             <section id="leftBoxes">
-                <div class="box1"></div>
-                <div class="box2"></div>
-                <div class="box3"></div>
-                <div class="box4"></div>
-                <div class="box5"></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
             </section>
         </div>
     </div>
