first-flow-final

--- a/Semester B web 2019/exercises/firstFlow/specificDiet.html
+++ b/Semester B web 2019/exercises/firstFlow/specificDiet.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -41,23 +41,22 @@
         <div id="navBar">
             <div class="row">
                 <div class="nav nav-tabs nav-pills" id="nav-tab">
-                    <a class="nav-link active" href="./index.html"><span>Home</span> <img src="images/Home_Icon_2.png"
-                            class="icons"></a>
-                    <a class="nav-link " href="./handleWish.html"><span>Handle Wish</span> <img src="images/Image_9.png"
-                            class="icons"></a>
+                    <a class="nav-link " href="./index.html"><span>Home</span> <img src="images/Home_Icon_2.png"
+                        alt=""  class="icons"></a>
+                    <a class="nav-link active" href="./handleWish.html"><span>Handle Wish</span> <img src="images/Image_9.png"
+                        alt=""  class="icons"></a>
                     <a class="nav-link" href="#"><span>Create new user</span>
-                        <img src="images/Person_Add_Icon_1.png" class="icons"></a>
+                        <img src="images/Person_Add_Icon_1.png" alt="picture" class="icons"></a>
                     <a class="nav-link" href="#"><span>My diets</span> <img src="images/Food_Apple_Icon_1.png"
-                            class="icons"></a>
+                        alt="picture" class="icons"></a>
                     <a class="nav-link" href="#"><span>My workouts</span> <img src="images/Image_4.png"
-                            class="icons"></a>
+                        alt="picture" class="icons"></a>
                     <a class="nav-link" href="#"><span>Account manager</span> <img src="images/Image_5.png "
-                            class="icons"></a>
+                        alt="picture"  class="icons"></a>
                 </div>
             </div>
         </div>
         <!-- !/nav bar -->
-
 
         <div id="middleWrapper">
             <!-- !breadCrumb -->
@@ -82,8 +81,10 @@
                     <div class="table-responsive">
                         <table class="table table-bordered table-striped table-highlight">
                             <thead>
-                                <th> <img src="./images/Add_Icon_1.png" class="addIcon">Products</th>
+                                <tr>
+                                <th> <img src="./images/Add_Icon_1.png" alt="picture" class="addIcon">Products</th>
                                 <th>Amount (Grams)</th>
+                                </tr>
                             </thead>
                             <tbody class="mainTableBody">
                                 <tr>
@@ -125,7 +126,9 @@
                 <div class="table-responsive">
                     <table class="table table-bordered table-highlight">
                         <thead>
+                            <tr>
                             <th>Choose Meal</th>
+                            </tr>
                         </thead>
                         <tbody>
                             <tr>
@@ -155,8 +158,10 @@
                 <div class="table-responsive">
                     <table class="table table-bordered  table-highlight">
                         <thead>
+                            <tr>
                             <th> Nutritional Values</th>
                             <th>Amount (Grams)</th>
+                            </tr>
                         </thead>
                         <tbody>
                             <tr>
@@ -187,8 +192,10 @@
                 <div class="table-responsive">
                     <table class="table table-bordered  table-highlight">
                         <thead>
+                        <tr>
                             <th> Nutritional Values</th>
                             <th>Amount (Grams)</th>
+                        </tr>
                         </thead>
                         <tbody>
                             <tr>
@@ -227,6 +234,6 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
             integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
             crossorigin="anonymous"></script>
+    </div>        
 </body>
 </html>
-
