--- a/Semester B web 2019/exercises/firstFlow/handleWish.html
+++ b/Semester B web 2019/exercises/firstFlow/handleWish.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -27,7 +27,7 @@
             <div class="input-group mb-3">
                 <div class="input-group-prepend">
                     <button class="btn searchBtn" type="button" id="button-addon1"><img src="./images/Search_Icon_1.png" alt="search icon"
-                            class="searchIcon"></button>
+                        class="searchIcon"></button>
                 </div>
                 <input type="text" class="form-control" placeholder="">
             </div>
@@ -40,17 +40,17 @@
         <div id="navBar">
             <div class="row">
                 <div class="nav nav-tabs nav-pills" id="nav-tab">
-                    <a class="nav-link " href="./index.html"><span>Home</span> <img src="images/Home_Icon_2.png"
+                    <a class="nav-link " href="./index.html"><span>Home</span> <img src="images/Home_Icon_2.png" alt="picture"
                             class="icons"></a>
-                    <a class="nav-link active" href="./handleWish.html"><span>Handle Wish</span> <img src="images/Image_9.png"
+                    <a class="nav-link active" href="./handleWish.html"><span>Handle Wish</span> <img src="images/Image_9.png" alt="picture"
                             class="icons"></a>
                     <a class="nav-link" href="#"><span>Create new user</span>
-                        <img src="images/Person_Add_Icon_1.png" class="icons"></a>
-                    <a class="nav-link" href="#"><span>My diets</span> <img src="images/Food_Apple_Icon_1.png"
+                        <img src="images/Person_Add_Icon_1.png" alt="picture" class="icons"></a>
+                    <a class="nav-link" href="#"><span>My diets</span> <img src="images/Food_Apple_Icon_1.png" alt="picture"
                             class="icons"></a>
-                    <a class="nav-link" href="#"><span>My workouts</span> <img src="images/Image_4.png"
+                    <a class="nav-link" href="#"><span>My workouts</span> <img src="images/Image_4.png" alt="picture"
                             class="icons"></a>
-                    <a class="nav-link" href="#"><span>Account manager</span> <img src="images/Image_5.png "
+                    <a class="nav-link" href="#"><span>Account manager</span> <img src="images/Image_5.png " alt="picture"
                             class="icons"></a>
                 </div>
             </div>
@@ -72,7 +72,7 @@
 
             <!--! Wish Table -->
             <div id="wishesTable">
-                <div class="badge badge-pill badge-primary" id="Wishes_title">Wishes</div>
+                <div class="badge badge-pill badge-primary Wishes_title">Wishes</div>
                 <table class="table table-hover usersTable" id="circle_table">
                     <thead>
                         <tr>
@@ -117,10 +117,6 @@
                             </th>
                             <td colspan="2"><a class="nameLink" href="#">Haim Moshe</a></td>
                             <td>Workout</td>
-                        </tr>
-                        <tr>
-                            <th scope="row"><img src="images/Image_9.png" class="icons tableIcon"></th>
-                            <td colspan="3" id="see_more"><a href="./handleWish.html">See More</a></td>
                         </tr>
                     </tbody>
                 </table>
