--- a/Semester B web 2019/exercises/firstFlow/index.html
+++ b/Semester B web 2019/exercises/firstFlow/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -39,25 +39,26 @@
     <div id="navBar">
       <div class="row">
         <div class="nav nav-tabs nav-pills" id="nav-tab">
-          <a class="nav-link active" href="./index.html"><span>Home</span> <img src="images/Home_Icon_2.png"
+          <a class="nav-link active" href="./index.html"><span>Home</span> <img src="images/Home_Icon_2.png" alt="picture"
               class="icons"></a>
-          <a class="nav-link " href="./handleWish.html"><span>Handle Wish</span> <img src="images/Image_9.png"
+          <a class="nav-link " href="./handleWish.html"><span>Handle Wish</span> <img src="images/Image_9.png" alt="picture"
               class="icons"></a>
           <a class="nav-link" href="#"><span>Create new user</span>
-            <img src="images/Person_Add_Icon_1.png" class="icons"></a>
-          <a class="nav-link" href="#"><span>My diets</span> <img src="images/Food_Apple_Icon_1.png" class="icons"></a>
-          <a class="nav-link" href="#"><span>My workouts</span> <img src="images/Image_4.png" class="icons"></a>
-          <a class="nav-link" href="#"><span>Account manager</span> <img src="images/Image_5.png " class="icons"></a>
+            <img src="images/Person_Add_Icon_1.png" alt="picture" class="icons"></a>
+          <a class="nav-link" href="#"><span>My diets</span> <img src="images/Food_Apple_Icon_1.png" alt="picture" class="icons"></a>
+          <a class="nav-link" href="#"><span>My workouts</span> <img src="images/Image_4.png" alt="picture" class="icons"></a>
+          <a class="nav-link" href="#"><span>Account manager</span> <img src="images/Image_5.png " alt="picture" class="icons"></a>
         </div>
       </div>
     </div>
     <!-- !/nav bar -->
 
-    <div id="middleWrapper">
+    <div id="middleWrapper"> 
       <!-- !breadCrumb -->
       <nav aria-label="breadcrumb">
         <ol class="breadcrumb bckgorundNone"></ol>
       </nav>
+  
       <!-- !/breadCrumb -->
 
       <!-- !current page indicator -->
@@ -68,7 +69,7 @@
 
       <!--! Wish Table -->
       <div id="wishesTable">
-        <div class="badge badge-pill badge-primary" id="Wishes_title">Wishes</div>
+        <div class="badge badge-pill badge-primary Wishes_title">Wishes</div>
         <table class="table table-hover usersTable" id="circle_table">
           <thead>
             <tr>
@@ -101,34 +102,31 @@
               <td>Other</td>
             </tr>
             <tr>
-              <th scope="row"><img src="images/Image_9.png" class="icons tableIcon"></th>
-              <td colspan="3" id="see_more"><a href="./handleWish.html">See More</a></td>
+              <th scope="row"><img src="images/Image_9.png" alt="picture" class="icons tableIcon"></th>
+              <td colspan="3" class="see_more"><a href="./handleWish.html">See More</a></td>
             </tr>
           </tbody>
         </table>
       </div>
       <!--! /Wish Table -->
-
+    
       <div class="clear"></div>
-
+   
       <!--! User Table -->
 
       <div id="newUserTable">
-          <div class="badge badge-pill badge-primary" id="Wishes_title">New Users</div>
-          <table class="table table-hover usersTable" id="circle_table">
+          <div class="badge badge-pill badge-primary Wishes_title">New Users</div>
+          <table class="table table-hover usersTable" id="circle_table_another">
             <tbody>
               <tr>
-                <th scope="row" id="remove_top_border">
-                  </td>
-                  <div class="orangeDot"></div>
-                </th>
-                <td colspan="3" id="remove_top_border"><a class="nameLink" href="#">Alon Mizrhit</a></td>
+                <th scope="row" class="remove_top_border_th"><div class="orangeDot"></div> </th>
+                <td colspan="3" class="remove_top_border_th"><a class="nameLink" href="#">Alon Mizrhit</a></td>
               </tr>
               <tr>
                 <th scope="row">
                   <div class="orangeDot"></div>
                 </th>
-                <td td colspan="3"><a class="nameLink" href="#">Gal Gadot</a></td>
+                <td colspan="3"><a class="nameLink" href="#">Gal Gadot</a></td>
               </tr>
               <tr>
                 <th scope="row">
@@ -138,10 +136,8 @@
 
               </tr>
               <tr>
-                <th scope="row"><img src="images/Person_Add_Icon_1.png" class="icons tableIcon">
-        </div>
-        </th>
-        <td colspan="3" id="see_more"><a href="#">See More</a></td>
+                <th scope="row"><img src="images/Person_Add_Icon_1.png" alt="picture" class="icons tableIcon"></th>
+        <td colspan="3" class="see_more"><a href="#">See More</a></td>
         </tr>
         </tbody>
         </table>
@@ -156,6 +152,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
       crossorigin="anonymous"></script>
+    </div>
+  </div>
 </body>
 
 </html>
