--- a/Semester B web 2019/exercises/firstFlow/specificWish.html
+++ b/Semester B web 2019/exercises/firstFlow/specificWish.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -39,17 +39,17 @@
             <div class="row">
                 <div class="nav nav-tabs nav-pills" id="nav-tab">
                     <a class="nav-link " href="./index.html"><span>Home</span> <img src="images/Home_Icon_2.png"
-                            class="icons"></a>
+                        alt="picture" class="icons"></a>
                     <a class="nav-link active " href="./handleWish.html"><span>Handle Wish</span> <img
-                            src="images/Image_9.png" class="icons"></a>
+                            src="images/Image_9.png" alt="picture" class="icons"></a>
                     <a class="nav-link" href="#"><span>Create new user</span>
-                        <img src="images/Person_Add_Icon_1.png" class="icons"></a>
+                        <img src="images/Person_Add_Icon_1.png" alt="picture" class="icons"></a>
                     <a class="nav-link" href="#"><span>My diets</span> <img src="images/Food_Apple_Icon_1.png"
-                            class="icons"></a>
+                        alt="picture"   class="icons"></a>
                     <a class="nav-link" href="#"><span>My workouts</span> <img src="images/Image_4.png"
-                            class="icons"></a>
+                        alt="picture"  class="icons"></a>
                     <a class="nav-link" href="#"><span>Account manager</span> <img src="images/Image_5.png "
-                            class="icons"></a>
+                        alt="picture"  class="icons"></a>
                 </div>
             </div>
         </div>
@@ -85,14 +85,13 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <th scope="row" id="remove_top_border">
-                                </td>
+                            <th scope="row" class="remove_top_border_th">
                                 <div class="orangeDot"></div>
                             </th>
-                            <td id="remove_top_border"><a class="nameLink" href="./specificDiet.html">First meal -
+                            <td class="remove_top_border_th"><a class="nameLink" href="./specificDiet.html">First meal -
                                     Banana</a></td>
-                            <td id="remove_top_border"></td>
-                            <td id="remove_top_border"></td>
+                            <td class="remove_top_border_th"></td>
+                            <td class="remove_top_border_th"></td>
                         </tr>
                         <tr>
                             <th scope="row">
@@ -120,14 +119,14 @@
                 <!-- !specific whishes table -->
                 <!-- !progress bar badge -->
                 <span class="badge badge-pill badge-primary goalBadge">Goal:<br>Loss 10KG</span>
-                <span class="badge badge-pill badge-secondary">Duration:<br> 30days</br></span>
+                <span class="badge badge-pill badge-secondary">Duration:<br> 30days</span>
                 <span class="badge badge-pill badge-danger">Start:<br> 1/6/19</span>
                 <span class="badge badge-pill badge-success">End:<br>1/6/19</span>
                 <!-- !/progress bar badge -->
 
                 <!-- !progress bar -->
                 <div class="progress">
-                    <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax=""
+                    <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" 
                         style="width: 50%"></div><br>
                     <!-- !/progress bar -->
                 </div>
@@ -143,15 +142,15 @@
                     <div class="row">
                         <div class="col-sm">
                             <a href="./specificDiet.html" class="badge badge-pill badge-primary themeBadge"> <img
-                                    src="./images/Food_Apple_Icon_1Large.png">Diet</a>
+                                    src="./images/Food_Apple_Icon_1Large.png" alt="picture">Diet</a>
                         </div>
                         <div class="col-sm">
                             <a href="#" class="badge badge-pill badge-primary themeBadge"> <img
-                                    src="./images/Image_4Large.png">Workout</a>
+                                    src="./images/Image_4Large.png" alt="picture">Workout</a>
                         </div>
                         <div class="col-sm">
                             <a href="#" class="badge badge-pill badge-primary themeBadge"> <img
-                                    src="./images/Image_6Large.png">Calendar</a>
+                                    src="./images/Image_6Large.png" alt="picture">Calendar</a>
                         </div>
                     </div>
                 </div>
