--- a/Semester B web 2019/exercises/firstFlow/index.html
+++ b/Semester B web 2019/exercises/firstFlow/index.html
@@ -16,9 +16,7 @@
 <body>
   <div id="mainWrapper">
     <!-- !logo -->
-    <a href="index.html" id="logoWidth">
-      <div id="logo"></div>
-    </a>
+    <a href="index.html" id="logoWidth"></a>
     <div id="profile"><img src="./images/profilePic.png" alt="profilePic"><a href="#">Log Out</a></div>
     <!-- !/logo -->
     <!-- !search -->
@@ -63,7 +61,7 @@
 
       <!-- !current page indicator -->
       <div class="alert alert-primary" id="currPageTitle" role="alert">
-        <h4>Home Page</h4>
+        <h1>Home Page</h1>
       </div>
       <!-- !/current page indicator -->
 
