--- a/Semester B web 2019/exercises/firstFlow/index.html
+++ b/Semester B web 2019/exercises/firstFlow/index.html
@@ -16,7 +16,7 @@
 <body>
   <div id="mainWrapper">
     <!-- !logo -->
-    <a href="index.html" id="logoWidth"></a>
+    <a href="index.html" id="logoWidth"><div id="logo"></div></a>
     <div id="profile"><img src="./images/profilePic.png" alt="profilePic"><a href="#">Log Out</a></div>
     <!-- !/logo -->
     <!-- !search -->
@@ -31,7 +31,7 @@
     </div>
     <!-- !/search -->
 
-    <div class="clear"></div>
+    <!-- <div class="clear"></div> -->
 
     <!-- !nav bar -->
     <div id="navBar">
@@ -108,7 +108,7 @@
       </div>
       <!--! /Wish Table -->
     
-      <div class="clear"></div>
+      <!-- <div class="clear"></div> -->
    
       <!--! User Table -->
 
