--- a/Semester B web 2019/exercises/firstFlow/specificWish.html
+++ b/Semester B web 2019/exercises/firstFlow/specificWish.html
@@ -33,7 +33,7 @@
             </div>
         </div>
         <!-- !/search -->
-        <div class="clear"></div>
+        <!-- <div class="clear"></div> -->
         <!-- !nav bar -->
         <div id="navBar">
             <div class="row">
@@ -136,7 +136,7 @@
                 <button class="btn btn-info" id="falseButton">Indeterminate</button>
                 <button class="btn btn-info" id="colorButton">Random Color</button>
                 <!-- !/cnd jquery -->
-                <div class="clear"></div>
+                <!-- <div class="clear"></div> -->
                 <!--!user progress details  -->
                 <div class="container dietWorkoutCalendar">
                     <div class="row">
